--- a/package.json
+++ b/package.json
@@ -15,10 +15,14 @@
     },
     "main" : "fis-kernel.js",
     "scripts" : {
-        "test" : "mocha test/ut --recursive"
+        "test" : "mocha test/ut"
     },
     "dependencies" : {
         "tar"  : "0.1.17",
-        "iconv-lite" : "0.2.10"
+        "iconv-lite" : "0.2.10",
+        "chai" : "1.8.0",
+        "fis-optimizer-clean-css" : "0.0.8",
+        "fis-optimizer-uglify-js" : "0.1.0",
+        "fis-packager-map" : "0.0.7"
     }
 }
