--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,5 @@
 language: node_js
-node_js:  
-
-     - 0.4  
-
-     - 0.6
-before_script:
-	-npm install
+node_js:
+  - "0.10"
+before_install:
+	-"npm install"
