--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-{
   "name": "fis-kernel",
   "description": "fis kernel.",
   "version": "1.8.16",
@@ -16,10 +15,6 @@
     "node": ">= 0.8.0"
   },
   "main": "fis-kernel.js",
-  "scripts": {
-    "test": "npm install mocha 
-             mocha test/ut"
-  },
   "dependencies": {
     "tar": "0.1.17",
     "iconv-lite": "0.2.10",
@@ -29,6 +24,10 @@
     "fis-packager-map": "0.0.7",
     "coveralls": "~2.3.0",
     "mocha-lcov-reporter": "0.0.1"
+  },
+  "scripts": {
+    "test": "npm install mocha" ,
+             "mocha test/ut"
   },
   "bin": {
     "coveralls": "./node_modules/coveralls/bin/coveralls.js"
