--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "fis-packager-map": "0.0.7",
     "coveralls": "~2.3.0",
     "mocha-lcov-reporter": "0.0.1",
-    "mocha" : "1.13.0"
+    "mocha" : "1.13.0",
+    "coveralls" : "2.3.0",
+    "mocha-lcov-reporter" : "0.0.1"
   },
   "scripts": {
     "test": "mocha test/ut"
