--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "mocha-lcov-reporter" : "0.0.1"
   },
   "scripts": {
-    "test": "mocha test/ut"
+    "test": "mocha test/ut",
+    "coveralls" : "istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   },
   "bin": {
     "coveralls": "./node_modules/coveralls/bin/coveralls.js"
