--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,4 @@ language: node_js
 node_js:
   - "0.10"
 after_script:
-  -coveralls
+  -./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha test/ut/. --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
