--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   },
   "scripts": {
     "test": "mocha test/ut",
-    "coveralls" : "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha test/ut/. --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+    "coveralls" : "istanbul cover ./node_modules/mocha/bin/_mocha test/ut/. --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   }, 
   "bin": {
     "coveralls": "./node_modules/coveralls/bin/coveralls.js"
