--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "istanbul" : "0.1.44"
   },
   "scripts": {
-    "test" : "istanbul cover ./node_modules/mocha/bin/_mocha test/ut/. --report lcovonly -- -R spec && cat ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
+    "test" : "istanbul cover ./node_modules/mocha/bin/_mocha test/ut/. --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage"
   }, 
   "bin": {
     "coveralls": "./node_modules/coveralls/bin/coveralls.js"
